# codex-proxy-rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  config.yaml  docker-compose.yml
backend/: Cargo.toml  build.rs  rust-toolchain.toml
backend/apps/gateway/: Cargo.toml
backend/apps/gateway/src/: bootstrap.rs  lib.rs  main.rs  workers.rs
backend/apps/gateway/tests/: bootstrap.rs  main.rs  workers.rs
backend/crates/gateway-admin/: Cargo.toml
backend/crates/gateway-admin/src/: lib.rs
backend/crates/gateway-admin/tests/: main.rs
backend/crates/gateway-api/: Cargo.toml
backend/crates/gateway-api/src/: health.rs  lib.rs
backend/crates/gateway-api/tests/: architecture.rs  health.rs  main.rs
backend/crates/gateway-core/: Cargo.toml
backend/crates/gateway-core/src/: error.rs  event.rs  health.rs  lib.rs  lifecycle.rs
backend/crates/gateway-core/tests/: error.rs  event.rs  health.rs  lifecycle.rs  main.rs
backend/crates/gateway-host/: Cargo.toml  build.rs
backend/crates/gateway-host/src/: config.rs  lib.rs  logging.rs  serve.rs
backend/crates/gateway-host/tests/: config.rs  logging.rs  main.rs  serve.rs
backend/crates/gateway-protocol/: Cargo.toml
backend/crates/gateway-protocol/src/: lib.rs
backend/crates/gateway-store/: Cargo.toml
backend/crates/gateway-store/src/: lib.rs
backend/crates/gateway-store/tests/: main.rs
backend/crates/providers/openai/: Cargo.toml
backend/crates/providers/xai/: Cargo.toml
backend/migrations/: 0001_initial.sql
backend/scripts/: check_architecture.sh
backend/src/: lib.rs  main.rs
backend/src/accounts/: account.rs  import.rs  mod.rs  pool.rs  scheduler.rs  service.rs  store.rs  window.rs
backend/src/accounts/cookies/: mod.rs
backend/src/accounts/manage/: cookies.rs  export.rs  import.rs  lifecycle.rs  mod.rs  oauth.rs  probe.rs  quota.rs  quota_view.rs  service.rs  types.rs
backend/src/accounts/pool/: filters.rs  runtime.rs  state.rs  types.rs
backend/src/accounts/quota/: mod.rs  runtime.rs
backend/src/accounts/refresh/: lease.rs  mod.rs  policy.rs  runtime.rs  service.rs
backend/src/admin/: mod.rs  response.rs  router.rs  update_payload.rs
backend/src/admin_queries/: accounts.rs  dashboard.rs  mod.rs
backend/src/api/: assets.rs  mod.rs  router.rs
backend/src/auth/: mod.rs  service.rs  store.rs  types.rs
backend/src/bootstrap/: application.rs  config.rs  import_sqlite.rs  mod.rs  services.rs  shutdown.rs  state.rs
backend/src/config/: loader.rs  mod.rs  schema.rs  settings.rs  types.rs
backend/src/dispatch/: attempts.rs  cloudflare.rs  errors.rs  mod.rs  recording.rs  service.rs  upstream.rs  upstream_call.rs
backend/src/fleet/: account.rs  account_failure.rs  account_gateway.rs  import.rs  mod.rs  usage.rs  window.rs
backend/src/http/: router.rs
backend/src/infra/: database.rs  format.rs  identity.rs  json.rs  logging.rs  mod.rs  paths.rs  redis.rs  schema.sql  time.rs
backend/src/keys/: manage.rs  mod.rs  service.rs  store.rs  types.rs
backend/src/models/: catalog.rs  gateway.rs  mod.rs  service.rs  snapshot.rs  store.rs  types.rs
backend/src/proxy/: auth.rs  mod.rs
backend/src/runtime/: bootstrap.rs  services.rs  shutdown.rs  state.rs
backend/src/settings/: mod.rs  service.rs  store.rs  types.rs
backend/src/telemetry/: billing.rs  dashboard.rs  diagnostics.rs  mod.rs  rebuild.rs  recorder.rs
backend/src/update/: archive.rs  download.rs  mod.rs  release.rs  service.rs  state.rs  types.rs
backend/src/upstream/: fingerprint.rs  mod.rs  token_client.rs
backend/src/web/: assets.rs  headers.rs  mod.rs
backend/tests/: main.rs
backend/tests/accounts/: account_store.rs  cloudflare.rs  mod.rs  quota.rs  quota_refresh.rs  store.rs
backend/tests/api/: assets.rs  mod.rs
backend/tests/architecture/: dependencies.rs
backend/tests/auth/: store.rs
backend/tests/bootstrap/: import_sqlite.rs  mod.rs  services.rs
backend/tests/config/: mod.rs
backend/tests/dispatch/: mod.rs  service.rs
backend/tests/fixtures/: sqlite_v3.sql
backend/tests/fleet/: account_failure.rs  mod.rs  quota.rs
backend/tests/infra/: database.rs  identity.rs  logging.rs  mod.rs  paths.rs  time.rs
backend/tests/keys/: store.rs
backend/tests/models/: catalog.rs  store.rs
backend/tests/proxy/: auth.rs  mod.rs
backend/tests/runtime/: mod.rs  services.rs
backend/tests/support/: accounts.rs  admin.rs  assertions.rs  client_keys.rs  config.rs  fingerprint.rs  jwt.rs  mod.rs  sqlite.rs  storage.rs  wire_profile.rs
backend/tests/telemetry/: dashboard.rs  mod.rs  rebuild.rs
backend/tests/upstream/: mod.rs  token_client.rs
crates/adapters/: Cargo.toml
crates/adapters/src/: lib.rs
crates/adapters/tests/: account_repository.rs  admin_sessions.rs  client_keys.rs  codex.rs  cookies.rs  events.rs  models.rs  oauth.rs  refresh_leases.rs  session_affinity.rs
crates/assets/: Cargo.toml
crates/assets/src/: headers.rs  lib.rs  router.rs
crates/assets/tests/: assets.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/core/tests/: account_pool.rs  admin_settings.rs  auth.rs  cloudflare.rs  models.rs  protocol.rs  session_affinity.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs
crates/platform/tests/: admin_password.rs  client_key_auth.rs  config.rs  crypto.rs  log_rotation.rs  storage_schema.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: bootstrap.rs  config.rs  lib.rs  repositories.rs  services.rs  state.rs  upstream.rs
crates/runtime/tests/: account_pool_restore.rs  fingerprint.rs  quota_refresh.rs  session_affinity.rs  tasks.rs  token_refresh.rs  upstream.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs  router.rs
crates/server/tests/: admin_accounts_routes.rs  admin_api_contract.rs  admin_client_keys_routes.rs  admin_logs_routes.rs  admin_models_routes.rs  admin_session_routes.rs  admin_settings_routes.rs  assets_routes.rs  http_trace_middleware.rs  openai_chat_upstream.rs  openai_diagnostics_routes.rs  openai_models_auth.rs  openai_responses_routes.rs
(+2480 files in other folders)
