[package]
name = "codex-proxy-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
aes-gcm.workspace = true
argon2.workspace = true
base64.workspace = true
chrono.workspace = true
config.workspace = true
dirs.workspace = true
hex.workspace = true
hmac.workspace = true
rand.workspace = true
rustls.workspace = true
rustls-native-certs.workspace = true
rustls-pki-types.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
zeroize.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.27.0"
