[package]
name = "codex-proxy-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
codex-proxy-adapters = { path = "../adapters" }
codex-proxy-core = { path = "../core" }
codex-proxy-platform = { path = "../platform" }
futures.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true
reqwest.workspace = true
tempfile = "3.27.0"
tokio.workspace = true
tokio-tungstenite.workspace = true
wiremock = "0.6.5"

[lints]
workspace = true
