[package]
name = "codex-proxy-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
codex-proxy-assets = { path = "../assets" }
codex-proxy-core = { path = "../core" }
codex-proxy-platform = { path = "../platform" }
codex-proxy-runtime = { path = "../runtime" }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
codex-proxy-adapters = { path = "../adapters" }
futures.workspace = true
secrecy.workspace = true
serde_yml.workspace = true
sqlx.workspace = true
tempfile = "3.27.0"
tokio-tungstenite.workspace = true
tower.workspace = true
tracing-subscriber.workspace = true
wiremock = "0.6.5"

[lints]
workspace = true
