[package]
name = "gateway-api"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false
rust-version = "1.97"
autotests = false

[[test]]
name = "main"
path = "tests/main.rs"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = { version = "0.8.9", default-features = false, features = ["json", "query", "ws"] }
base64 = "0.22.1"
chrono = { version = "0.4.45", features = ["serde"] }
futures = "0.3.32"
gateway-core = { path = "../gateway-core" }
gateway-protocol = { path = "../gateway-protocol" }
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", default-features = false, features = ["macros"] }
tracing = "0.1.44"
subtle = "2.6.1"

[dev-dependencies]
tokio = { version = "1.52.3", default-features = false, features = ["macros", "rt"] }
tower = { version = "0.5.3", features = ["util"] }

[lints]
workspace = true
