[package]
name = "gateway-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false
rust-version = "1.97"
autotests = false

[[test]]
name = "main"
path = "tests/main.rs"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.45"
futures = "0.3.32"
futures-timer = "3.0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
uuid = { version = "1.23.3", features = ["v7"] }

[lints]
workspace = true
