[package]
name = "gateway-protocol"
version = "0.0.0"
edition = "2024"
license = "MIT"
publish = false
rust-version = "1.97"
autotests = false

[[test]]
name = "main"
path = "tests/main.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
uuid = { version = "1.23.3", features = ["v4"] }

[lints.rust]
warnings = "deny"
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = 10 }
redundant_clone = { level = "deny", priority = 9 }
large_enum_variant = { level = "warn", priority = 8 }
needless_collect = { level = "deny", priority = 7 }
