[package]
name = "gateway-store"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false
rust-version = "1.97"
autotests = false

[[test]]
name = "main"
path = "tests/main.rs"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.45"
futures = "0.3.32"
gateway-admin = { path = "../gateway-admin" }
gateway-core = { path = "../gateway-core" }
hex = "0.4.3"
redis = { version = "1.3.0", default-features = false, features = ["tokio-comp", "connection-manager", "script"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
sha2 = "0.11.0"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "json", "macros", "migrate"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", default-features = false, features = ["rt", "time"] }
tracing = "0.1.44"
url = "2.5.8"
uuid = { version = "1.23.3", features = ["v4", "v7"] }

[dev-dependencies]
tokio = { version = "1.52.3", default-features = false, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
