[package]
name = "provider-xai"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
autotests = false

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "0.4.45", features = ["clock", "serde"] }
futures = "0.3.32"
gateway-admin = { path = "../../gateway-admin" }
gateway-core = { path = "../../gateway-core" }
gateway-protocol = { path = "../../gateway-protocol" }
getrandom = "0.3.4"
jsonwebtoken = { version = "=10.3.0", default-features = false, features = ["rust_crypto"] }
reqwest = { version = "=0.12.28", default-features = false, features = ["stream", "rustls-tls-native-roots", "gzip", "brotli", "zstd", "deflate", "http2"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", default-features = false, features = ["macros", "net", "sync", "time"] }
tracing = "0.1.44"
url = "2.5.8"
uuid = { version = "1.23.3", features = ["v4", "v7"] }
zeroize = { version = "1.8.2", features = ["derive"] }

[dev-dependencies]
p256 = { version = "0.13.2", features = ["ecdsa", "pkcs8"] }
tokio = { version = "1.52.3", features = ["macros", "rt"] }
wiremock = "0.6.5"

[[test]]
name = "main"
path = "tests/main.rs"

[lints]
workspace = true
